syntax = "proto3";

option java_multiple_files = true;
option java_package = "tech.qdrant.grpc";
option java_outer_classname = "QdrantProto";

package qdrant;

service Points {
  rpc Upsert (UpsertPoints) returns (PointsOperationResponse) {}
  rpc Delete (DeletePoints) returns (PointsOperationResponse) {}
  rpc Get (GetPoints) returns (GetResponse) {}
  rpc SetPayload (SetPayloadPoints) returns (PointsOperationResponse) {}
  rpc DeletePayload (DeletePayloadPoints) returns (PointsOperationResponse) {}
  rpc ClearPayload (ClearPayloadPoints) returns (PointsOperationResponse) {}
  rpc CreateFieldIndex (CreateFieldIndexCollection) returns (PointsOperationResponse) {}
  rpc DeleteFieldIndex (DeleteFieldIndexCollection) returns (PointsOperationResponse) {}
  rpc Search (SearchPoints) returns (SearchResponse) {}
  rpc Scroll (ScrollPoints) returns (ScrollResponse) {}
}

// ---------------------------------------------
// ------------- Point Id Requests -------------
// ---------------------------------------------

message PointId {
  oneof point_id_options {
    uint64 num = 1;
    string uuid = 2;
  }
}


// ---------------------------------------------
// ---------------- RPC Requests ---------------
// ---------------------------------------------

message UpsertPoints {
  string collection = 1;
  optional bool wait = 2;
  repeated PointStruct points = 3;
}

message DeletePoints {
  string collection = 1;
  optional bool wait = 2;
  PointsSelector points = 3;
}

message GetPoints {
  string collection = 1;
  repeated PointId ids = 2;
  optional bool with_vector = 3;
  WithPayloadSelector with_payload = 4;
}

message SetPayloadPoints {
  string collection = 1;
  optional bool wait = 2;
  map<string, Payload> payload = 3;
  repeated PointId points = 4;
}

message DeletePayloadPoints {
  string collection = 1;
  optional bool wait = 2;
  repeated string keys = 3;
  repeated PointId points = 4;
}

message ClearPayloadPoints {
  string collection = 1;
  optional bool wait = 2;
  PointsSelector points = 3;
}

message CreateFieldIndexCollection {
  string collection = 1;
  optional bool wait = 2;
  string field_name = 3;
}

message DeleteFieldIndexCollection {
  string collection = 1;
  optional bool wait = 2;
  string field_name = 3;
}

message PayloadIncludeSelector {
  repeated string include = 1;
}

message PayloadExcludeSelector {
  repeated string exclude = 1;
}

message WithPayloadSelector {
  oneof selector_options {
    bool enable = 1;
    PayloadIncludeSelector include = 2;
    PayloadExcludeSelector exclude = 3;
  }
}

message SearchParams {
  optional uint64 hnsw_ef = 1;
}

message SearchPoints {
  string collection = 1;
  repeated float vector = 2;
  Filter filter = 3;
  uint64 top = 4;
  optional bool with_vector = 5;
  WithPayloadSelector with_payload = 6;
  SearchParams params = 7;
}

message ScrollPoints {
  string collection = 1;
  Filter filter = 2;
  optional PointId offset = 3;
  optional uint32 limit = 4;
  optional bool with_vector = 5;
  WithPayloadSelector with_payload = 6;
}

// ---------------------------------------------
// ---------------- RPC Response ---------------
// ---------------------------------------------

message PointsOperationResponse {
  UpdateResult result = 1;
  double time = 2;
}

message UpdateResult {
  uint64 operation_id = 1;
  UpdateStatus status = 2;
}

enum UpdateStatus {
  UnknownUpdateStatus = 0;
  Acknowledged = 1;
  Completed = 2;
}

message ScoredPoint {
  PointId id = 1;
  map<string, Payload> payload = 2;
  float score = 3;
  repeated float vector = 4;
  uint64 version = 5;
}

message SearchResponse {
  repeated ScoredPoint result = 1;
  double time = 2;
}

message ScrollResponse {
  optional PointId next_page_offset = 1;
  repeated RetrievedPoint result = 2;
  double time = 3;
}

message RetrievedPoint {
  PointId id = 1;
  map<string, Payload> payload = 2;
  repeated float vector = 3;
}

message GetResponse {
  repeated RetrievedPoint result = 1;
  double time = 2;
}

// ---------------------------------------------
// ------------- Filter Conditions -------------
// ---------------------------------------------

message Filter {
  repeated Condition should = 1;
  repeated Condition must = 2;
  repeated Condition must_not = 3;
}

message Condition {
  oneof condition_one_of {
    FieldCondition field = 1;
    HasIdCondition hasId = 2;
    Filter filter = 3;
  }
}

message HasIdCondition {
  repeated PointId has_id = 1;
}

message FieldCondition {
  string key = 1;
  Match match = 2;
  Range range = 3;
  GeoBoundingBox geo_bounding_box = 4;
  GeoRadius geo_radius = 5;
}

message Match {
  oneof match_value {
    string keyword = 1;
    int64 integer = 2;
  }
}

message Range {
  optional double lt = 1;
  optional double gt = 2;
  optional double gte = 3;
  optional double lte = 4;
}

message GeoBoundingBox {
  GeoPoint top_left = 1;
  GeoPoint bottom_right = 2;
}

message GeoRadius {
  GeoPoint center = 1;
  float radius = 2;
}

// ---------------------------------------------
// -------------- Points Selector --------------
// ---------------------------------------------

message PointsSelector {
  oneof points_selector_one_of {
    PointsIdsList points = 1;
    Filter filter = 2;
  }
}

message PointsIdsList {
  repeated PointId ids = 1;
}

// ---------------------------------------------
// ------------------- Point -------------------
// ---------------------------------------------


message PointStruct {
  PointId id = 1;
  repeated float vector = 2;
  map<string, Payload> payload = 3;
}


// ---------------------------------------------
// ------------------ Payload ------------------
// ---------------------------------------------

message Payload {
  oneof payload_one_of {
    KeywordPayload keyword = 1;
    IntegerPayload integer = 2;
    FloatPayload float = 3;
    GeoPayload geo = 4;
  }
}

message KeywordPayload {
  repeated string values = 1;
}

message IntegerPayload {
  repeated int64 values = 1;
}

message FloatPayload {
  repeated double values = 1;
}

message GeoPayload {
  repeated GeoPoint values = 1;
}

message GeoPoint {
  double lon = 1;
  double lat = 2;
}
